# ACL2026

./: .gitignore  README.md  READNE.md  requirements.txt
verl/: pyproject.toml  setup.py
verl/scripts/: data_process.py  model_merger.py  train_llama.sh
verl/verl/: __init__.py
verl/verl/tools/: base_tool.py
verl/verl/trainer/: main_ppo.py
verl/verl/trainer/config/: ppo_trainer.yaml
verl/verl/trainer/ppo/: core_algos.py  ray_trainer.py  reward.py
verl/verl/utils/: tracking.py
verl/verl/utils/dataset/: rl_dataset.py
verl/verl/utils/logger/: aggregate_logger.py
verl/verl/utils/reward_score/: custom_reward.py
verl/verl/workers/: fsdp_workers.py
verl/verl/workers/actor/: dp_actor.py
verl/verl/workers/rollout/: async_server.py
verl/verl/workers/rollout/vllm_rollout/: vllm_rollout.py  vllm_rollout_spmd.py
