[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verl"
dynamic = ["version"]
description = "A research codebase for RL training and evaluation of LLMs."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.3.0",
  "pyarrow>=20.0.0",
  "ray>=2.47.1",
  "httpx>=0.28.1",
  "regex>=2024.5.15",
  "jsonlines>=4.0.0",
  "datasets>=3.6.0",
  "transformers>=4.53.0",
  "tokenizers>=0.21.2",
  "accelerate>=1.8.1",
  "peft>=0.15.2",
  "safetensors>=0.5.3",
  "sentencepiece>=0.2.0",
  "tiktoken>=0.9.0",
  "wandb>=0.21.0",
  "tensorboard>=2.20.0",
  "psutil>=7.0.0",
  "pyzmq>=27.0.0",
]

[project.optional-dependencies]
serve = ["fastapi>=0.115.14", "uvicorn>=0.35.0", "orjson>=3.10.18"]
dev = ["ruff", "pre-commit"]

[tool.ruff]
line-length = 300

[tool.ruff.lint]
isort = { known-first-party = ["verl"] }
select = ["E", "F", "UP", "B", "I", "G"]
ignore = ["F405", "F403", "E731", "B007", "UP032", "UP007", "G004"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "verl/version/version" }

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
verl = ["version/*", "trainer/config/*.yaml"]
